--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     <!-- =================== SEARCH BAR END ================== -->
 
     <div class="row mt-4">
-      <div class="col-5">
+      <div class="col-12 col-lg-5">
         <div class="cont">
           <div class="innerCont">
             <div class="newsBox px-3 py-3">
@@ -212,7 +212,7 @@
           </div>
         </div>
       </div>
-      <div class="col-7">
+      <div class="col-12 col-lg-7 mt-4 mt-lg-0">
       <div class="row">
         <div class="col-12">
           <div class="cont">
@@ -247,7 +247,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 mt-4">
+        <div class="col-12 mt-4 mb-5 mb-lg-0">
           <div class="cont">
             <div class="innerCont px-3 py-3">
               <h6 class="mb-0 fw-bold mb-2">AD SPACE</h6>
