--- a/account.html
+++ b/account.html
@@ -4,9 +4,145 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=d, initial-scale=1.0">
-    <title>Document</title>
+    <!-- == LINKS START == -->
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link
+    rel="stylesheet"
+    href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+    crossorigin="anonymous"
+    />
+    <!-- == LINKS END == -->
+    <title>Account</title>
 </head>
 <body>
-    
-</body>
+    		<!-- ==== SIDEBAR START ==== -->
+		<div id="sideBarId" class="sideBar">
+			<div class="d-flex flex-column">
+        <div class="d-flex justify-content-between align-items-center px-4 pt-3">
+          <!-- LOGO START -->
+          <div class="logoContainer">
+            <h5 class="mb-0 fw-bold text-white">STATS BY DAYLIGHT 
+              <img src="assets/images/betaLogo.png" alt="beta">
+            </h5>
+          </div>
+          <!-- LOGO END -->
+          <div id="closeSidebar" onclick="closeSidebar()" class="pointer">
+            <i class="fas fa-times h1 mb-0 text-white"></i>
+          </div>
+        </div>
+				<ul class="list-unstyled ps-4">
+					<li onclick="closeSidebar()" class="mt-3">
+						<a class="text-decoration-none text-white fw-bold" href="">
+							Account
+						</a>
+					</li>
+					<li onclick="closeSidebar()" class="mt-3">
+						<a
+							class="text-decoration-none text-white fw-bold"
+							href=""
+						>
+							STREAM GADGET
+						</a>
+					</li>
+					<li onclick="closeSidebar()" class="mt-3">
+						<a
+							class="text-decoration-none text-white fw-bold"
+							href=""
+						>
+							Log in
+						</a>
+					</li>
+					<li onclick="closeSidebar()" class="mt-3">
+						<a class="text-decoration-none text-white fw-bold" href="#">
+							Privacy Policy
+						</a>
+					</li>
+					<li onclick="closeSidebar()" class="mt-3">
+              <a class="text-decoration-none" href="https://discord.com/users/195974363596587018">
+                <svg width="30" height="30" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd" viewBox="0 0 24 24" fill="#ffff"><path d="M19.54 0c1.356 0 2.46 1.104 2.46 2.472v21.528l-2.58-2.28-1.452-1.344-1.536-1.428.636 2.22h-13.608c-1.356 0-2.46-1.104-2.46-2.472v-16.224c0-1.368 1.104-2.472 2.46-2.472h16.08zm-4.632 15.672c2.652-.084 3.672-1.824 3.672-1.824 0-3.864-1.728-6.996-1.728-6.996-1.728-1.296-3.372-1.26-3.372-1.26l-.168.192c2.04.624 2.988 1.524 2.988 1.524-1.248-.684-2.472-1.02-3.612-1.152-.864-.096-1.692-.072-2.424.024l-.204.024c-.42.036-1.44.192-2.724.756-.444.204-.708.348-.708.348s.996-.948 3.156-1.572l-.12-.144s-1.644-.036-3.372 1.26c0 0-1.728 3.132-1.728 6.996 0 0 1.008 1.74 3.66 1.824 0 0 .444-.54.804-.996-1.524-.456-2.1-1.416-2.1-1.416l.336.204.048.036.047.027.014.006.047.027c.3.168.6.3.876.408.492.192 1.08.384 1.764.516.9.168 1.956.228 3.108.012.564-.096 1.14-.264 1.74-.516.42-.156.888-.384 1.38-.708 0 0-.6.984-2.172 1.428.36.456.792.972.792.972zm-5.58-5.604c-.684 0-1.224.6-1.224 1.332 0 .732.552 1.332 1.224 1.332.684 0 1.224-.6 1.224-1.332.012-.732-.54-1.332-1.224-1.332zm4.38 0c-.684 0-1.224.6-1.224 1.332 0 .732.552 1.332 1.224 1.332.684 0 1.224-.6 1.224-1.332 0-.732-.54-1.332-1.224-1.332z"></path></svg>
+              </a>
+					</li>
+				</ul>
+			</div>
+		</div>
+		<!-- ==== SIDEBAR END ==== -->
+
+
+  <!-- =================== HEADER CONTAINER START ================== -->
+  <header>
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-12 col-xl-12 mx-auto px-0">
+						<div class="header_container shadow d-flex justify-content-between align-items-center px-3 px-lg-0">
+              <div class="d-none d-lg-block">
+                <ul class="d-inline-flex list-unstyled mb-0">
+									<li>
+										<a class="text-decoration-none" href="">
+                      ACCOUNT
+										</a>
+									</li>
+                  <div class="line"></div>
+									<li>
+										<a class="text-decoration-none" href="">
+                      STREAM GADGET
+										</a>
+									</li>
+                </ul>
+              </div>
+
+              <!-- LOGO START -->
+              <div class="logoContainer">
+                <h2 class="mb-0 fw-bold text-white">STATS BY DAYLIGHT 
+                  <img src="assets/images/betaLogo.png" alt="beta">
+                </h2>
+              </div>
+              <!-- LOGO END -->
+
+              <!-- HUMBARGER START -->
+							<div id="hambergerBtn" class="d-block d-lg-none pointer">
+                <i class="fas fa-bars h4 mb-0 text-white"></i>
+							</div>
+              <!-- HUMBARGER END -->
+
+							<div class="d-none d-lg-flex align-content-center">
+								<ul class="d-inline-flex list-unstyled mb-0">
+									<li>
+										<a class="text-decoration-none" href="">
+											log in
+										</a>
+									</li>
+									<li>
+										<a class="text-decoration-none" href="">
+											Privacy Policy
+										</a>
+									</li>
+									<li style="margin-top: 1px;">
+										<a class="text-decoration-none" href="https://discord.com/users/195974363596587018">
+                      <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd" viewBox="0 0 24 24" fill="#fefefe"><path d="M19.54 0c1.356 0 2.46 1.104 2.46 2.472v21.528l-2.58-2.28-1.452-1.344-1.536-1.428.636 2.22h-13.608c-1.356 0-2.46-1.104-2.46-2.472v-16.224c0-1.368 1.104-2.472 2.46-2.472h16.08zm-4.632 15.672c2.652-.084 3.672-1.824 3.672-1.824 0-3.864-1.728-6.996-1.728-6.996-1.728-1.296-3.372-1.26-3.372-1.26l-.168.192c2.04.624 2.988 1.524 2.988 1.524-1.248-.684-2.472-1.02-3.612-1.152-.864-.096-1.692-.072-2.424.024l-.204.024c-.42.036-1.44.192-2.724.756-.444.204-.708.348-.708.348s.996-.948 3.156-1.572l-.12-.144s-1.644-.036-3.372 1.26c0 0-1.728 3.132-1.728 6.996 0 0 1.008 1.74 3.66 1.824 0 0 .444-.54.804-.996-1.524-.456-2.1-1.416-2.1-1.416l.336.204.048.036.047.027.014.006.047.027c.3.168.6.3.876.408.492.192 1.08.384 1.764.516.9.168 1.956.228 3.108.012.564-.096 1.14-.264 1.74-.516.42-.156.888-.384 1.38-.708 0 0-.6.984-2.172 1.428.36.456.792.972.792.972zm-5.58-5.604c-.684 0-1.224.6-1.224 1.332 0 .732.552 1.332 1.224 1.332.684 0 1.224-.6 1.224-1.332.012-.732-.54-1.332-1.224-1.332zm4.38 0c-.684 0-1.224.6-1.224 1.332 0 .732.552 1.332 1.224 1.332.684 0 1.224-.6 1.224-1.332 0-.732-.54-1.332-1.224-1.332z"></path></svg>
+										</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+      </div>
+  </header>
+  <!-- =================== HEADER CONTAINER END ================== -->
+
+  <!-- =================== ACCOUNT CONTAINER START ================== -->
+    <div class="page_container mt-5">
+        <div class="container-fluid">
+        </div>
+    </div>  
+  <!-- =================== ACCOUNT CONTAINER END ================== -->
+
+<!-- SCRIPTS START -->
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
+  <script src="assets/script.js"></script>
+  <!-- SCRIPTS END -->
+</body> 
 </html>
