--- a/states.html
+++ b/states.html
@@ -79,7 +79,7 @@
               <div class="d-none d-lg-block">
                 <ul class="d-inline-flex list-unstyled mb-0">
 									<li>
-										<a class="text-decoration-none" href="">
+										<a class="text-decoration-none" href="account.html">
                       ACCOUNT
 										</a>
 									</li>
