--- a/account.html
+++ b/account.html
@@ -167,7 +167,7 @@
 					</div>
 
 					<div class="row mb-4">
-						<div class="col-8">
+						<div class="col-12 col-lg-8">	
 							<div class="cont mt-4 shadow">
 								<div class="innerCont">
 									<div class="d-flex justify-content-around tab">
@@ -349,49 +349,49 @@
 								</div>
 						</div>
 						</div>
-						<div class="col-4">
+						<div class="col-12 col-lg-4">
 							<div class="cont mt-4 shadow">
 								<div class="innerCont">
 									<h5 class="text-center fw-bold w-100 tab py-2">Favourite Survivor Build</h5>
 									<div class="px-3 py-2 rightSideA">
 										<div class="row">
 											<div class="col-3">
-												<img width="100%" src="assets/images/qMark.png" alt="mark">
+												<img class="newsImg" width="100%" src="assets/images/qMark.png" alt="mark">
 											</div>
 											<h6 class="my-2">Not Specified</h6>
 											<hr />
 											<div class="col-3">
-												<img width="100%" src="assets/images/qMark.png" alt="mark">
+												<img class="newsImg" width="100%" src="assets/images/qMark.png" alt="mark">
 											</div>
 											<h6 class="my-2">Not Specified</h6>
 											<hr />
 											<div class="col-3">
-												<img width="100%" src="assets/images/qMark.png" alt="mark">
+												<img class="newsImg" width="100%" src="assets/images/qMark.png" alt="mark">
 											</div>
 											<h6 class="my-2">Not Specified</h6>
 											<hr />
 											<div class="col-3">
-												<img width="100%" src="assets/images/qMark.png" alt="mark">
+												<img class="newsImg" width="100%" src="assets/images/qMark.png" alt="mark">
 											</div>
 											<h6 class="my-2">Not Specified</h6>
 											<hr />
 											<div class="col-3">
-												<img width="100%" src="assets/images/qMark.png" alt="mark">
+												<img class="newsImg" width="100%" src="assets/images/qMark.png" alt="mark">
 											</div>
 											<h6 class="my-2">Not Specified</h6>
 											<hr />
 											<div class="col-3">
-												<img width="100%" src="assets/images/qMark.png" alt="mark">
+												<img class="newsImg" width="100%" src="assets/images/qMark.png" alt="mark">
 											</div>
 											<h6 class="my-2">Not Specified</h6>
 											<hr />
 											<div class="col-3">
-												<img width="100%" src="assets/images/qMark.png" alt="mark">
+												<img class="newsImg" width="100%" src="assets/images/qMark.png" alt="mark">
 											</div>
 											<h6 class="my-2">Not Specified</h6>
 											<hr />
 											<div class="col-3">
-												<img width="100%" src="assets/images/qMark.png" alt="mark">
+												<img class="newsImg" width="100%" src="assets/images/qMark.png" alt="mark">
 											</div>
 											<h6 class="my-2">Not Specified</h6>
 											<hr />
