--- a/account.html
+++ b/account.html
@@ -175,7 +175,7 @@
 										<h6 id="tab-2" class="fw-bold mb-0 w-100 text-center pointer py-2 h-100">Killer</h6>
 									</div>
 									<div id="content-1" class="justify-content-between">
-										<div class="mt-2 p-3">
+										<div class="mt-2 p-3 w-100">
 												<h3>SURVIVOR'S STATS</h3>
 												<div class="d-flex align-items-center my-3">
 													<h6 class="mb-0 fw-bold">Perfect Games:</h6>
@@ -255,14 +255,32 @@
 													<p class="mb-0 ms-2">294</p>
 												</div>
 										</div>
-										<div class="pt-5 pe-5">
+										<div class="pt-2 pt-md-5 pe-2 pe-md-5 text-center mb-3">
 											<img src="assets/images/badge1.png" alt="">
+											<div class="d-flex flex-column mt-4">
+												<div class="d-flex">
+													<div class="accBox border border-1 border-dark text-center">
+														<img width="80%" src="assets/images/badge1.png" alt="">
+													</div>
+													<div class="accBox border border-1 border-dark text-center">
+														<img width="80%" src="assets/images/badge1.png" alt="">
+													</div>
+												</div>
+												<div class="d-flex">
+													<div class="accBox border border-1 border-dark text-center">
+														<img width="80%" src="assets/images/badge1.png" alt="">
+													</div>
+													<div class="accBox border border-1 border-dark text-center">
+														<img width="80%" src="assets/images/badge1.png" alt="">
+													</div>
+												</div>
+											</div>
 										</div>
 									</div>
 
 
 									<div id="content-2" class="justify-content-between">
-										<div class="mt-2 p-3">
+										<div class="mt-2 p-3 w-100">
 												<h3>KILLER'S STATS</h3>
 												<div class="d-flex align-items-center my-3">
 													<h6 class="mb-0 fw-bold">Perfect Games:</h6>
@@ -342,8 +360,26 @@
 													<p class="mb-0 ms-2">294</p>
 												</div>
 										</div>
-										<div class="pt-5 pe-5">
+										<div class="pt-2 pt-md-5 pe-2 pe-md-5 text-center mb-3">
 											<img src="assets/images/badge2.png" alt="">
+																						<div class="d-flex flex-column mt-4">
+												<div class="d-flex">
+													<div class="accBox border border-1 border-dark text-center">
+															<img width="88%" src="assets/images/badge2.png" alt="">
+													</div>
+													<div class="accBox border border-1 border-dark text-center">
+															<img width="88%" src="assets/images/badge2.png" alt="">
+													</div>
+												</div>
+												<div class="d-flex">
+													<div class="accBox border border-1 border-dark text-center">
+															<img width="88%" src="assets/images/badge2.png" alt="">
+													</div>
+													<div class="accBox border border-1 border-dark text-center">
+															<img width="88%" src="assets/images/badge2.png" alt="">
+													</div>
+												</div>
+											</div>
 										</div>
 									</div>
 								</div>
