--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <div class="row mt-4">
       <div class="col-12 col-lg-5">
         <div class="cont">
-          <div class="innerCont">
+          <div class="innerCont grayBg">
             <div class="newsBox px-3 py-3">
               <h6 class="mb-0 fw-bold">Dead By Daylight Official News</h6>
               <div class="row mt-4">
@@ -157,7 +157,7 @@
                   <a href="#">
                     <h6 class="themeColor fw-bold text-decoration-underline">Dead By Daylight's Resident Evil crossover is here</h6>
                   </a>
-                  <small>Leon, Jill and Nemesis invade the multiplayer horror flick....</small>
+                  <small class="fw-bold">Leon, Jill and Nemesis invade the multiplayer horror flick....</small>
                 </div>
               </div>
               <hr />
@@ -169,7 +169,7 @@
                   <a href="#">
                     <h6 class="themeColor fw-bold text-decoration-underline">Dead By Daylight's Resident Evil crossover is here</h6>
                   </a>
-                  <small>Leon, Jill and Nemesis invade the multiplayer horror flick....</small>
+                  <small class="fw-bold">Leon, Jill and Nemesis invade the multiplayer horror flick....</small>
                 </div>
               </div>
               <hr />
@@ -181,7 +181,7 @@
                   <a href="#">
                     <h6 class="themeColor fw-bold text-decoration-underline">Dead By Daylight's Resident Evil crossover is here</h6>
                   </a>
-                  <small>Leon, Jill and Nemesis invade the multiplayer horror flick....</small>
+                  <small class="fw-bold">Leon, Jill and Nemesis invade the multiplayer horror flick....</small>
                 </div>
               </div>
               <hr />
@@ -193,7 +193,7 @@
                   <a href="#">
                     <h6 class="themeColor fw-bold text-decoration-underline">Dead By Daylight's Resident Evil crossover is here</h6>
                   </a>
-                  <small>Leon, Jill and Nemesis invade the multiplayer horror flick....</small>
+                  <small class="fw-bold">Leon, Jill and Nemesis invade the multiplayer horror flick....</small>
                 </div>
               </div>
               <hr />
@@ -205,7 +205,7 @@
                   <a href="#">
                     <h6 class="themeColor fw-bold text-decoration-underline">Dead By Daylight's Resident Evil crossover is here</h6>
                   </a>
-                  <small>Leon, Jill and Nemesis invade the multiplayer horror flick....</small>
+                  <small class="fw-bold">Leon, Jill and Nemesis invade the multiplayer horror flick....</small>
                 </div>
               </div>
             </div>
