--- a/account.html
+++ b/account.html
@@ -289,21 +289,21 @@
 								</div>
 								<div class="pt-2 pt-md-5 pe-2 pe-md-5 text-center mb-3">
 									<img src="assets/images/badge1.png" alt="">
-									<div class="d-flex flex-column mt-4">
+									<div class="contRotate purpleBg d-flex flex-column mt-5">
 										<div class="d-flex">
 											<div class="accBox border border-1 border-dark text-center">
-												<img width="80%" src="assets/images/badge1.png" alt="">
+												<img class="eachRotate ms-2 mt-1" width="80%" src="assets/images/badge1.png" alt="">
 											</div>
 											<div class="accBox border border-1 border-dark text-center">
-												<img width="80%" src="assets/images/badge1.png" alt="">
+												<img class="eachRotate ms-2 mt-1" width="80%" src="assets/images/badge1.png" alt="">
 											</div>
 										</div>
 										<div class="d-flex">
 											<div class="accBox border border-1 border-dark text-center">
-												<img width="80%" src="assets/images/badge1.png" alt="">
+												<img class="eachRotate ms-2 mt-1" width="80%" src="assets/images/badge1.png" alt="">
 											</div>
 											<div class="accBox border border-1 border-dark text-center">
-												<img width="80%" src="assets/images/badge1.png" alt="">
+												<img class="eachRotate ms-2 mt-1" width="80%" src="assets/images/badge1.png" alt="">
 											</div>
 										</div>
 									</div>
@@ -394,21 +394,21 @@
 								</div>
 								<div class="pt-2 pt-md-5 pe-2 pe-md-5 text-center mb-3">
 									<img src="assets/images/badge2.png" alt="">
-									<div class="d-flex flex-column mt-4">
+									<div class="contRotate purpleBg d-flex flex-column mt-5">
 										<div class="d-flex">
 											<div class="accBox border border-1 border-dark text-center">
-												<img width="88%" src="assets/images/badge2.png" alt="">
+												<img class="eachRotate ms-2 mt-1" width="88%" src="assets/images/badge2.png" alt="">
 											</div>
 											<div class="accBox border border-1 border-dark text-center">
-												<img width="88%" src="assets/images/badge2.png" alt="">
+												<img class="eachRotate ms-2 mt-1" width="88%" src="assets/images/badge2.png" alt="">
 											</div>
 										</div>
 										<div class="d-flex">
 											<div class="accBox border border-1 border-dark text-center">
-												<img width="88%" src="assets/images/badge2.png" alt="">
+												<img class="eachRotate ms-2 mt-1" width="88%" src="assets/images/badge2.png" alt="">
 											</div>
 											<div class="accBox border border-1 border-dark text-center">
-												<img width="88%" src="assets/images/badge2.png" alt="">
+												<img class="eachRotate ms-2 mt-1" width="88%" src="assets/images/badge2.png" alt="">
 											</div>
 										</div>
 									</div>
