--- a/account.html
+++ b/account.html
@@ -149,7 +149,7 @@
 			</div>
 
 			<div class="cont mt-5 shadow">
-				<div class="innerCont px-3 py-2">
+				<div class="innerCont grayBg px-3 py-2">
 					<div class="d-flex align-items-center">
 						<h5 class="fw-bold">
 							William Liamson
@@ -201,7 +201,7 @@
 			<div class="row mb-4">
 				<div class="col-12 col-lg-8">
 					<div class="cont mt-4 shadow">
-						<div class="innerCont">
+						<div class="innerCont grayBg">
 							<div class="d-flex justify-content-around tab">
 								<h6 id="tab-1" class="fw-bold mb-0 w-100 text-center pointer py-2 h-100 active">Survivor
 								</h6>
@@ -420,7 +420,7 @@
 				</div>
 				<div class="col-12 col-lg-4">
 					<div class="cont mt-4 shadow">
-						<div class="innerCont">
+						<div class="innerCont grayBg">
 							<h5 class="text-center fw-bold w-100 tab py-2">Favourite Survivor Build</h5>
 							<div class="px-3 py-2 rightSideA">
 								<div class="row">
