--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <div class="row mt-4">
       <div class="col-12 col-lg-5">
         <div class="cont">
-          <div class="innerCont grayBg">
+          <div class="innerCont grayBg grayBg">
             <div class="newsBox px-3 py-3">
               <h6 class="mb-0 fw-bold">Dead By Daylight Official News</h6>
               <div class="row mt-4">
@@ -216,7 +216,7 @@
       <div class="row">
         <div class="col-12">
           <div class="cont">
-            <div class="innerCont">
+            <div class="innerCont grayBg">
               <div class="webNews px-3 py-3">
                 <h6 class="mb-0 fw-bold">Website News:</h6>
                 <div class="border border-dark border-2 rounded px-2 py-2 mt-3">
@@ -249,7 +249,7 @@
         </div>
         <div class="col-12 mt-4 mb-5 mb-lg-0">
           <div class="cont">
-            <div class="innerCont px-3 py-3">
+            <div class="innerCont grayBg px-3 py-3">
               <h6 class="mb-0 fw-bold mb-2">AD SPACE</h6>
               <small class="text-dark">We don't currently support Ads, but you can support us through Ko-Fi, Thank youuu!</small>
               <div class="row mt-4">
