--- a/states.html
+++ b/states.html
@@ -23,14 +23,14 @@
               <div class="cont shadow">
               <div class="innerCont">
               <div class="modal-content">
-                <div class="modal-header">
+                <div class="modal-header grayBg">
                   <h5 class="modal-title" id="exampleModalLabel">Favorite Survivor Build</h5>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body">
+                <div class="modal-body grayBg">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus similique ut dicta sint, dolores enim doloremque debitis provident facilis cum. Placeat ex molestiae commodi quidem possimus praesentium dolorum aliquid molestias consequatur laudantium, officiis, sint impedit soluta? Esse expedita at perferendis voluptatibus dignissimos ipsa fugiat? Iste saepe veritatis pariatur obcaecati animi eos dolorum itaque voluptate. Deserunt dolorum repudiandae officiis dolore, error eos modi, optio fuga esse ipsa sed officia quas laboriosam tenetur? Reiciendis ipsum repellendus eum, id ab dolor amet. Nesciunt, enim repellendus esse aspernatur incidunt saepe debitis nam corrupti sed itaque asperiores minus veniam ratione? Impedit, vero magnam! Nesciunt dolorum et ea hic exercitationem dolorem ipsam quasi, repudiandae impedit dolor facere, corporis veniam voluptas sed eum quam maxime praesentium inventore magni beatae eligendi neque. Sed iure repudiandae aliquid error reiciendis sint, autem aut libero officia totam, itaque culpa! Quidem eveniet dolor voluptatibus possimus, officia ullam autem praesentium deserunt sequi laudantium voluptatem laborum magnam ad veritatis, maiores, sed natus commodi corporis accusamus asperiores voluptate adipisci! Culpa eaque repellendus nulla doloribus labore ad totam perspiciatis suscipit mollitia reprehenderit voluptatibus eius, laboriosam eum ipsum aliquam laborum maxime. Veniam iure quod sequi ipsa iste iusto, autem omnis totam qui sint. Aliquam vero neque inventore esse, corrupti at assumenda quasi repudiandae culpa beatae eum cupiditate obcaecati. Culpa placeat accusamus sed laboriosam quo tempora facilis recusandae eum molestias minus incidunt officiis cupiditate dolore, impedit dolores eveniet illo non alias eaque ducimus aspernatur ea! Quo, doloribus aut quis amet officiis tempora tempore dolores neque, commodi esse quas architecto magnam ipsum impedit consequatur beatae deleniti maiores inventore? Ab nulla accusamus officia maxime sequi earum distinctio cumque asperiores similique repellendus, amet fugit repudiandae soluta tenetur quia odit voluptates ullam! Maxime eligendi omnis nemo rem obcaecati, soluta voluptatibus, quisquam vel commodi, aspernatur ea mollitia? Cum omnis eum beatae dicta iusto!
                 </div>
-                <div class="modal-footer">
+                <div class="modal-footer grayBg">
                   <button type="button" class="border border-1 border-danger rounded themeColor py-2 px-3" data-bs-dismiss="modal">Close</button>
                   <button type="button" class="themeBtn border-0 py-2 shadow px-3 rounded text-white">Save changes</button>
                 </div>
@@ -163,7 +163,7 @@
 <div class="page_container mt-5">
     <div class="container-fluid">
         <div class="cont">
-            <div class="innerCont">
+            <div class="innerCont grayBg">
                 <div class="row p-3">
                     <div class="col-12">
                         <!-- HEADER START -->
